update LeetCode Weekly Contest 476

--- a/algorithm/LeetCode/[Hard] 1970. Last Day Where You Can Still Cross.md
+++ b/algorithm/LeetCode/[Hard] 1970. Last Day Where You Can Still Cross.md
@@ -193,3 +193,59 @@ public:
     }
 };
 ```
+
+**Solution 4: (BFS, Binary Search, upper bound)**
+```
+Runtime: 408 ms, Beats 23.89%
+Memory: 262.10 MB, Beats 30.37%
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+    bool check(int mid, int row, int col, vector<vector<int>> &cells) {
+        int i, d, nr, nc;
+        vector<vector<int>> dp(row, vector<int>(col));
+        vector<vector<bool>> visited(row, vector<bool>(col));
+        for (i = 0; i < mid; i ++) {
+            dp[cells[i][0] - 1][cells[i][1] - 1] = 1;
+        }
+        queue<array<int, 2>> q;
+        for (i = 0; i < col; i ++) {
+            if (dp[0][i] == 0) {
+                q.push({0, i});
+                visited[0][i] = true;
+            }
+        }
+        while (q.size()) {
+            auto [r, c] = q.front();
+            q.pop();
+            if (r == row - 1) {
+                return true;
+            }
+            for (d = 0; d < 4; d ++) {
+                nr = r + dd[d];
+                nc = c + dd[d + 1];
+                if (0 <= nr && nr < row && 0 <= nc && nc < col && dp[nr][nc] == 0 && !visited[nr][nc]) {
+                    q.push({nr, nc});
+                    visited[nr][nc] = true;
+                }
+            }
+        }
+        return false;
+    }
+public:
+    int latestDayToCross(int row, int col, vector<vector<int>>& cells) {
+        int left = 0, right = row * col, mid, ans;
+        while (left <= right) {
+            mid = left + (right - left) / 2;
+            if (!check(mid, row, col, cells)) {
+                right = mid - 1;
+            } else {
+                ans = mid;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
