update LeetCode Biweekly Contest 170

--- a/algorithm/LeetCode/[Easy] 2154. Keep Multiplying Found Values by Two.md
+++ b/algorithm/LeetCode/[Easy] 2154. Keep Multiplying Found Values by Two.md
@@ -69,3 +69,24 @@ public:
     }
 };
 ```
+
+**Solution 3: (Hash Table)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 14.30 MB, Beats 42.13%
+```
+```c++
+class Solution {
+public:
+    int findFinalValue(vector<int>& nums, int original) {
+        bool visited[1001] = {false};
+        for (auto &num: nums) {
+            visited[num] = true;
+        }
+        while (original <= 1000 && visited[original]) {
+            original *= 2;
+        }
+        return original;
+    }
+};
+```
