--- a/algorithm/LeetCode/[Easy] 3190. Find Minimum Operations to Make All Elements Divisible by Three.md
+++ b/algorithm/LeetCode/[Easy] 3190. Find Minimum Operations to Make All Elements Divisible by Three.md
@@ -38,16 +38,16 @@ Output: 0
 ---
 **Solution 1: (Greedy)**
 ```
-Runtime: 3 ms
-Memory: 22.11 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 23.18 MB, Beats 79.62%
 ```
 ```c++
 class Solution {
 public:
     int minimumOperations(vector<int>& nums) {
         int ans = 0;
-        for (auto num: nums) {
-            ans += num%3 != 0;
+        for (auto &num: nums) {
+            ans += (num % 3) != 0;
         }
         return ans;
     }
