--- a/algorithm/LeetCode/[Hard] 2045. Second Minimum Time to Reach Destination.md
+++ b/algorithm/LeetCode/[Hard] 2045. Second Minimum Time to Reach Destination.md
@@ -244,3 +244,62 @@ public:
     }
 };
 ```
+
+**Solution 5: (BFS, O(N + E))**
+
+        1
+      / | \
+    2   |   3
+        | /
+        4
+        |
+        5
+
+dist    1  2  3  4  5
+0       0  3  3  3  6
+1       6 13  6  6 13
+
+```
+Runtime: 156 ms, Beats 76.35%
+Memory: 197.98 MB, Beats 61.94%
+```
+```c++
+class Solution {
+public:
+    int secondMinimum(int n, vector<vector<int>>& edges, int time, int change) {
+        int d, r, nt;
+        vector<vector<int>> g(n + 1);
+        queue<array<int, 2>> q;
+        vector<vector<int>> dist(n + 1, vector<int>(2, -1));
+        for (auto &e: edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
+        }
+        q.push({1, 0});
+        dist[1][0] = 0;
+        while (q.size()) {
+            auto [u, t] = q.front();
+            q.pop();
+            nt = t;
+            d = nt / change, r = nt % change;
+            if (d % 2) {
+                nt += change - r;
+            }
+            nt += time;
+            for (auto &v: g[u]) {
+                if (dist[v][0] == -1) {
+                    q.push({v, nt});
+                    dist[v][0] = nt;
+                } else if (dist[v][1] == -1 && dist[v][0] != nt) {
+                    if (v == n) {
+                        return nt;
+                    }
+                    q.push({v, nt});
+                    dist[v][1] = nt;
+                }
+            }
+        }
+        return -1;
+    }
+};
+```
