--- a/algorithm/LeetCode/[Hard] 2092. Find All People With Secret.md
+++ b/algorithm/LeetCode/[Hard] 2092. Find All People With Secret.md
@@ -166,3 +166,45 @@ public:
     }
 };
 ```
+
+**Solution 4: (BFS)**
+```
+Runtime: 98 ms, Beats 91.69%
+Memory: 171.67 MB, Beats 86.38%
+```
+```c++
+class Solution {
+public:
+    vector<int> findAllPeople(int n, vector<vector<int>>& meetings, int firstPerson) {
+        int i;
+        vector<vector<array<int, 2>>> g(n);
+        for (auto &meeting: meetings) {
+            g[meeting[0]].push_back({meeting[1], meeting[2]});
+            g[meeting[1]].push_back({meeting[0], meeting[2]});
+        }
+        queue<array<int, 2>> q;
+        vector<int> dist(n, INT_MAX);
+        q.push({0, 0});
+        q.push({firstPerson, 0});
+        dist[0] = 0;
+        dist[firstPerson] = 0;
+        while (q.size()) {
+            auto [u, t] = q.front();
+            q.pop();
+            for (auto [v, nt]: g[u]) {
+                if (t <= nt && dist[v] > nt) {
+                    dist[v] = nt;
+                    q.push({v, nt});
+                }
+            }
+        }
+        vector<int> ans;
+        for (i = 0; i < n; i ++) {
+            if (dist[i] != INT_MAX) {
+                ans.push_back(i);
+            }
+        }
+        return ans;
+    }
+};
+```
