--- a/algorithm/LeetCode/[Hard] 2258. Escape the Spreading Fire.md
+++ b/algorithm/LeetCode/[Hard] 2258. Escape the Spreading Fire.md
@@ -162,3 +162,81 @@ public:
     }
 };
 ```
+
+**Solution 3: (BFS, Binary Search, 2 BFS)**
+```
+Runtime: 81 ms, Beats 30.18%
+Memory: 71.32 MB, Beats 20.04%
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+    bool check(int mid, vector<vector<int>> &grid, vector<vector<int>> &dist) {
+        int m = grid.size(), n = grid[0].size(), d, nr, nc;
+        queue<array<int, 3>> q;
+        vector<vector<int>> dist2(m, vector<int>(n, INT_MAX));
+        dist2[0][0] = 0;
+        q.push({0, 0, 0});
+        while (q.size()) {
+            auto [r, c, k] = q.front();
+            q.pop();
+            for (d = 0; d < 4; d ++) {
+                nr = r + dd[d];
+                nc = c + dd[d + 1];
+                if (0 <= nr && nr < m && 0 <= nc && nc < n && grid[nr][nc] == 0) {
+                    if (nr == m - 1 && nc == n - 1) {
+                        if (dist[nr][nc] - mid >= k + 1) {
+                            return true;
+                        }
+                    } else {
+                        if (dist[nr][nc] - mid > k + 1 && dist2[nr][nc] > k + 1) {
+                            dist2[nr][nc] = k + 1;
+                            q.push({nr, nc, k + 1});
+                        }
+                    }
+                }
+            }
+        }
+        return false;
+    }
+public:
+    int maximumMinutes(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size(), i, j, d, nr, nc;
+        queue<array<int, 3>> q;
+        vector<vector<int>> dist(m, vector<int>(n, INT_MAX));
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                if (grid[i][j] == 1) {
+                    dist[i][j] = 0;
+                    q.push({i, j, 0});
+                } else if (grid[i][j] == 2) {
+                    dist[i][j] = -1;
+                }
+            }
+        }
+        while (q.size()) {
+            auto [r, c, k] = q.front();
+            q.pop();
+            for (d = 0; d < 4; d ++) {
+                nr = r + dd[d];
+                nc = c + dd[d + 1];
+                if (0 <= nr && nr < m && 0 <= nc && nc < n && grid[nr][nc] == 0 && dist[nr][nc] > k + 1) {
+                    dist[nr][nc] = k + 1;
+                    q.push({nr, nc, k + 1});
+                }
+            }
+        }
+        int left = 0, right = 1e9, mid, ans = -1;
+        while (left <= right) {
+            mid = left + (right - left) / 2;
+            if (!check(mid, grid, dist)) {
+                right = mid - 1;
+            } else {
+                ans = mid;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
