--- a/algorithm/LeetCode/[Hard] 2328. Number of Increasing Paths in a Grid.md
+++ b/algorithm/LeetCode/[Hard] 2328. Number of Increasing Paths in a Grid.md
@@ -89,3 +89,91 @@ public:
     }
 };
 ```
+
+**Solution 3: (DP Botom-Up, Sort)**
+```
+Runtime: 179 ms, Beats 18.76%
+Memory: 80.26 MB, Beats 18.76%
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+public:
+    int countPaths(vector<vector<int>>& grid) {
+        //Why sorting?
+        //. By sorting the values in ascending order, we can ensure that when we consider a particular element (i, j), all the elements that are smaller than it have already been processed. This is important because we want to count the number of strictly increasing sequences.
+
+        int m = grid.size(), n = grid[0].size(), i, j, d, nr, nc, MOD = 1e9 + 7;
+        vector<vector<long long>> dp(m,vector<long long>(n, 1));
+        vector<array<int, 3>> v;
+        for (i = 0; i < m; i ++){
+            for (j = 0; j < n; j ++){
+               v.push_back({grid[i][j], i, j});
+            }
+        }
+        sort(v.begin(), v.end());
+        for (i = 0; i < v.size(); i ++){
+            auto [a, r, c] = v[i];
+            for (d = 0; d < 4; d ++) {
+                nr = r + dd[d];
+                nc = c + dd[d + 1];
+                if (0 <= nr && nr < m && 0 <= nc && nc < n){
+                    if (grid[nr][nc] < a){
+                        dp[r][c] += dp[nr][nc];
+                        dp[r][c] %= MOD;
+                    }
+                }
+            }
+        }
+        long long ans = 0;
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                ans += dp[i][j];
+                ans %= MOD;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (DP Top-Down)**
+```
+Runtime: 43 ms, Beats 85.66%
+Memory: 52.06 MB, Beats 44.07%
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+    long long dfs(int i, int j, vector<vector<long long>> &dp, vector<vector<int>> &grid) {
+        if (dp[i][j]) {
+            return dp[i][j];
+        }
+        int m = grid.size(), n = grid[0].size(), MOD = 1e9 + 7, d, ni, nj;
+        long long rst = 1;
+        for (d = 0; d < 4; d ++) {
+            ni = i + dd[d];
+            nj = j + dd[d + 1];
+            if (0 <= ni && ni < m && 0 <= nj && nj < n && grid[i][j] > grid[ni][nj]) {
+                rst += dfs(ni, nj, dp, grid);
+                rst %= MOD;
+            }
+        }
+        dp[i][j] = rst;
+        return rst;
+    }
+public:
+    int countPaths(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size(), i, j, MOD = 1e9 + 7;
+        vector<vector<long long>> dp(m, vector<long long>(n));
+        long long ans = 0;
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                ans += dfs(i, j, dp, grid);
+                ans %= MOD;
+            }
+        }
+        return ans;
+    }
+};
+```
