--- a/algorithm/LeetCode/[Hard] 2458. Height of Binary Tree After Subtree Removal Queries.md
+++ b/algorithm/LeetCode/[Hard] 2458. Height of Binary Tree After Subtree Removal Queries.md
@@ -600,3 +600,72 @@ public:
     }
 };
 ```
+
+**Solution 9: (DFS, Hash Table)**
+
+                                    depth
+            1 (4,0) // (hts,ans)     0
+          /   \
+  (2,3) 3       4 (3,2)              1
+      /       /   \
+     2       6     5 (2,2)           2
+  (1,3)    (1,3)     \
+                      7              3
+                     (1,2)
+
+
+                                    depth
+              5 (4,0)                0
+           /     \
+         8 (3,2)   9 (2,3)           1
+       /   \      /   \
+(2,2) 2     1    3     7             2
+    /   \ (1,3) (1,3) (1,3)
+   4    6                            3
+(1,3) (1,3)
+```
+Runtime: 326 ms, Beats 43.27%
+Memory: 329.01 MB, Beats 35.10%
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+    unordered_map<TreeNode*, int> hts;
+    unordered_map<int, int> ans;
+    int height(TreeNode* node) {
+        if (node) {
+            hts[node] = 1 + max(height(node->left), height(node->right));
+            return hts[node];
+        }
+        return 0; 
+    };
+    void dfs(TreeNode *node, int depth, int mx) {
+        if (!node) {
+            return;
+        }
+        ans[node->val] = mx;
+        dfs(node->right, depth + 1, max(mx, depth + hts[node->left]));
+        dfs(node->left, depth + 1, max(mx, depth + hts[node->right]));
+    };
+public:
+    vector<int> treeQueries(TreeNode* root, vector<int>& queries) {
+        vector<int> res;
+        height(root);
+        dfs(root, 0, 0);
+        for (int &q: queries) {
+            res.push_back(ans[q]);
+        }
+        return res;
+    }
+};
+```
