--- a/algorithm/LeetCode/[Hard] 2585. Number of Ways to Earn Points.md
+++ b/algorithm/LeetCode/[Hard] 2585. Number of Ways to Earn Points.md
@@ -78,3 +78,64 @@ public:
     }
 };
 ```
+
+**Solution 2: (DFS, prefix sum)**
+
+     ^      v0 root |
+     |    /   \     |
+     |  v1     ...  v
+     |   \         costToOthers = totalCost - revCost[i]
+     |    vi
+     |  ans[i] = costToStartNode + costToOthers
+  costToStartNode 
+  = depth[i] - revCost[i]
+
+           2 (1,1,0) // depth,revCost,ans
+         /    \
+        v      v
+(2,1,1) 1      0 (0,0,1)
+         \
+          V
+           3 (3,1,2)
+    
+totalCost: 1
+
+```
+Runtime: 149 ms, Beats 93.14%
+Memory: 216.94 MB, Beats 64.48%
+```
+```c++
+class Solution {
+    int totalCost = 0;
+    void dfs(vector<vector<pair<int,int>>> &g, int u, int p, vector<int> &revCost, vector<int>& depth, int currentDepth) {
+        depth[u] = currentDepth;
+        for (auto [v, cost] : g[u]) {
+            if (v != p) {
+                revCost[v] = revCost[u] + cost;
+                totalCost += cost;
+                dfs(g, v, u, revCost, depth, currentDepth + 1);
+            }
+        }
+    }
+public:
+    vector<int> minEdgeReversals(int n, vector<vector<int>>& edges) {
+        int i;
+        vector<vector<pair<int,int>>> g(n);
+        for (auto &e: edges) {
+            g[e[0]].push_back({e[1], 0});
+            g[e[1]].push_back({e[0], 1});
+        }
+        vector<int> revCost(n, 0);
+        vector<int> depth(n, 0);
+        dfs(g, 0, -1, revCost, depth, 0);
+        vector<int> ans(n);
+        ans[0] = totalCost;
+        for (i = 1; i < n; i++) {
+            int costToStartNode = depth[i] - revCost[i];
+            int costToOthers = totalCost - revCost[i];
+            ans[i] = costToStartNode + costToOthers;
+        }
+        return ans;
+    }
+};
+```
