--- a/algorithm/LeetCode/[Hard] 2608. Shortest Cycle in a Graph.md
+++ b/algorithm/LeetCode/[Hard] 2608. Shortest Cycle in a Graph.md
@@ -65,39 +65,52 @@ class Solution:
         return res if res < inf else -1
 ```
 
-**Solution 2: (BFS, try every vertex)**
+**Solution 2: (BFS, level order, try every vertex)**
 ```
-Runtime: 359 ms
-Memory: 96.1 MB
+Runtime: 116 ms, Beats 95.44%
+Memory: 53.77 MB, Beats 95.03%
 ```
 ```c++
 class Solution {
 public:
     int findShortestCycle(int n, vector<vector<int>>& edges) {
-        vector<vector<int>> G(n);
-        for (auto& e : edges) {
-            G[e[0]].push_back(e[1]);
-            G[e[1]].push_back(e[0]);
+        int i, j, k, sz, cur, ans = INT_MAX;
+        vector<vector<int>> g(n);
+        vector<int> dist(n, -1);
+        for (auto &e: edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
         }
-        int inf = 10000, res = inf;
-        auto root = [&](int i) {
-            vector<int> dis(n, inf);
-            dis[i] = 0;
-            queue<int> bfs{{i}};
-            while (!bfs.empty()) {
-                auto i = bfs.front(); bfs.pop();
-                for (auto j : G[i]) {
-                    if (dis[j] == inf) {
-                        dis[j] = 1 + dis[i];
-                        bfs.push(j);
-                    } else if (dis[i] <= dis[j]) {
-                        return dis[i] + dis[j] + 1;
+        for (i = 0; i < n; i ++) {
+            queue<int> q;
+            dist[i] = 0;
+            k = 0;
+            cur = INT_MAX;
+            q.push(i);
+            while (q.size()) {
+                sz = q.size();
+                for (j = 0; j < sz; j ++) {
+                    auto u = q.front();
+                    q.pop();
+                    for (auto &v: g[u]) {
+                        if (dist[v] == -1) {
+                            dist[v] = k + 1;
+                            q.push(v);
+                        } else if (dist[v] >= k) {
+                            cur = min(cur, k + 1 + dist[v]);
+                            break;
+                        }
                     }
                 }
+                if (cur != INT_MAX) {
+                    break;
+                }
+                k += 1;
             }
-            return inf;
-        };
-        for (int i = 0; i < n; ++i)
-            res = min(res, root(i));
-        return res < inf ? res : -1;
+            ans = min(ans, cur);
+            fill(dist.begin(), dist.end(), -1);
+        }
+        return ans != INT_MAX ? ans : -1;
+    }
+};
 ```
