--- a/algorithm/LeetCode/[Hard] 2612. Minimum Reverse Operations.md
+++ b/algorithm/LeetCode/[Hard] 2612. Minimum Reverse Operations.md
@@ -152,3 +152,55 @@ public:
     }
 };
 ```
+
+**Solution 4: (BFS, set)**
+
+    0 1 2 3 4 5 6 7 8 9 10 11        0 1 2 3 4 5 6 7 8 9 10 11
+  -----------------------------    ------------------------------
+   |0 0 0 0 0 1|0 0 0 0  0  0    -> |1 0 0 0 0 0|0 0 0 0  0  0
+    0|0 0 0 0 1 0|0 0 0  0  0    ->  0|0 1 0 0 0 0|0 0 0  0  0
+    0 0|0 0 0 1 0 0|0 0  0  0    ->  0 0|0 0 1 0 0 0|0 0  0  0
+    0 0 0|0 0 1 0 0 0|0  0  0    ->  0 0 0|0 0 0 1 0 0|0  0  0
+    0 0 0 0|0 1 0 0 0 0| 0  0    ->  0 0 0 0|0 0 0 0 1 0| 0  0
+    0 0 0 0 0|1 0 0 0 0  0| 0    ->  0 0 0 0 0|0 0 0 0 0  1| 0
+
+```
+Runtime: 238 ms, Beats 58.18%
+Memory: 167.86 MB, Beats 58.18%
+```
+```c++
+class Solution {
+public:
+    vector<int> minReverseOperations(int n, int p, vector<int>& banned, int k) {
+        int i, st, ed;
+        queue<array<int, 2>> q;
+        vector<bool> ban(n);
+        for (auto &b: banned) {
+            ban[b] = true;
+        }
+        vector<set<int>> dp(2);
+        for (i = 0; i < n; i ++) {
+            if (!ban[i]) {
+                dp[i % 2].insert(i);
+            }
+        }
+        vector<int> ans(n, -1);
+        ans[p] = 0;
+        dp[p % 2].erase(p);
+        q.push({p, 0});
+        while (q.size()) {
+            auto [i, s] = q.front();
+            q.pop();
+            st = abs(i - k + 1);
+            ed = n - 1 - abs(n - i - k);
+            auto it = dp[st % 2].lower_bound(st);
+            while (it != dp[st % 2].end() && *it <= ed) {
+                ans[*it] = s + 1;
+                q.push({*it, s + 1});
+                dp[st % 2].erase(it++);
+            }
+        }
+        return ans;
+    }
+};
+```
