--- a/algorithm/LeetCode/[Hard] 2617. Minimum Number of Visited Cells in a Grid.md
+++ b/algorithm/LeetCode/[Hard] 2617. Minimum Number of Visited Cells in a Grid.md
@@ -50,6 +50,20 @@ Explanation: It can be proven that no path exists.
 # Submissions
 ---
 **Solution 1: (BFS, Set)**
+
+    [3,4,2,1],
+    [4,2,3,1],
+    [2,1,0,0],
+    [2,4,0,0]
+
+     x------> right
+     | 
+     |
+     v->---x
+  down
+
+    
+
 ```
 Runtime: 1239 ms, Beats 30.41%
 Memory: 435.74 MB, Beats 39.17%
