--- a/algorithm/LeetCode/[Hard] 2360. Longest Cycle in a Graph.md
+++ b/algorithm/LeetCode/[Hard] 2360. Longest Cycle in a Graph.md
@@ -128,3 +128,39 @@ public:
     }
 };
 ```
+
+**Solution 4: (BFS, each node can be part of at most one cycle)**
+```
+Runtime: 254 ms, Beats 25.80%
+Memory: 159.88 MB, Beats 35.23%
+```
+```c++
+class Solution {
+public:
+    int longestCycle(vector<int>& edges) {
+        int n = edges.size(), i, v, ans = -1;
+        vector<vector<int>> dist(n, {-1, -1});
+        queue<array<int, 3>> q;
+        for (i = 0; i < n; i ++) {
+            if (edges[i] != -1 && dist[i][0] == -1) {
+                dist[i] = {0, i};
+                q.push({i, 0, i});
+                while (q.size()) {
+                    auto [u, k, src] = q.front();
+                    q.pop();
+                    v = edges[u];
+                    if (v != -1) {
+                        if (dist[v][0] == -1) {
+                            dist[v] = {k + 1, src};
+                            q.push({v, k + 1, src});
+                        } else if (dist[v][1] == src) {
+                            ans = max(ans, k + 1 - dist[v][0]);
+                        }
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
