--- a/algorithm/LeetCode/[Hard] 2493. Divide Nodes Into the Maximum Number of Groups.md
+++ b/algorithm/LeetCode/[Hard] 2493. Divide Nodes Into the Maximum Number of Groups.md
@@ -401,3 +401,83 @@ public:
     }
 };
 ```
+
+**Solution 5: (BFS, Union Find)**
+```
+Runtime: 138 ms, Beats 69.50%
+Memory: 49.22 MB, Beats 82.70%
+```
+```c++
+class Solution {
+    vector<int> p;
+    int find(int x) {
+        if (p[x] != x) {
+            p[x] = find(p[x]);
+        }
+        return p[x];
+    }
+    void uni(int x, int y) {
+        int xr = find(x), yr = find(y);
+        p[yr] = xr;
+    }
+public:
+    int magnificentSets(int n, vector<vector<int>>& edges) {
+        int i, r, cur, mx, ans = 0;
+        bool flag;
+        vector<vector<int>> g(n + 1), grp(n + 1);
+        vector<int> dist(n + 1);
+        p.resize(n + 1);
+        for (i = 1; i <= n; i ++) {
+            p[i] = i;
+        }
+        for (auto &e: edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
+            uni(e[0], e[1]);
+        }
+        for (i = 1; i <= n; i ++) {
+            r = find(i);
+            grp[r].push_back(i);
+        }
+        for (i = 1; i <= n; i ++) {
+            if (grp[i].size() > 1) {
+                mx = 0;
+                for (auto &node: grp[i]) {
+                    dist[node] = 1;
+                    flag = true;
+                    queue<array<int, 2>> q;
+                    q.push({node, 1});
+                    while (q.size()) {
+                        auto [u, k] = q.front();
+                        cur = k;
+                        q.pop();
+                        for (auto &v: g[u]) {
+                            if (!dist[v]) {
+                                dist[v] = k + 1;
+                                q.push({v, k + 1});
+                            } else if (dist[v] == k) {
+                                flag = false;
+                                break;
+                            }
+                        }
+                    }
+                    if (flag) {
+                        mx = max(mx, cur);
+                    }
+                    fill(dist.begin(), dist.end(), 0);
+                }
+                if (mx == 0) {
+                    return -1;
+                }
+                ans += mx;
+            } else if (p[i] == i && grp[i].size() == 1) {
+                ans += 1;
+            }
+        }
+        if (ans == 0) {
+            return -1;
+        }
+        return ans;
+    }
+};
+```
