update LeetCode Weekly Contest 477

--- a/algorithm/LeetCode/[Easy] 1018. Binary Prefix Divisible By 5.md
+++ b/algorithm/LeetCode/[Easy] 1018. Binary Prefix Divisible By 5.md
@@ -55,3 +55,23 @@ class Solution:
             out.append(temp == 0)
         return out
 ```
+
+**Solution 2: (Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 18.58 MB, Beats 8.21%
+```
+```c++
+class Solution {
+public:
+    vector<bool> prefixesDivBy5(vector<int>& nums) {
+        int n = nums.size(), i, a = 0;
+        vector<bool> ans(n);
+        for (i = 0; i < n; i ++) {
+            a = ((a << 1) + nums[i]) % 5;
+            ans[i] = a == 0;
+        }
+        return ans;
+    }
+};
+```
